✨ Feat: 재고 감소를 위한 비관적 락 조회메서드 구현 및 테스트

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,9 +20,9 @@ spring:
     properties:
       hibernate.timezone.default_storage: NORMALIZE_UTC
       hibernate.jdbc.time_zone: UTC
-      hibernate.format_sql: false
-      hibernate.highlight_sql: false
-      hibernate.use_sql_comments: false
+      hibernate.format_sql: true
+      hibernate.highlight_sql: true
+      hibernate.use_sql_comments: true
       hibernate.default_batch_fetch_size: 100
   sql:
     init:
@@ -40,3 +40,9 @@ spring:
     url: jdbc:mysql://localhost:3306/hhplus?characterEncoding=UTF-8&serverTimezone=UTC
     username: application
     password: application
+
+logging:
+  level:
+    org.hibernate:
+      SQL: DEBUG
+      description.sql.BasicBinder: TRACE
