✅ Add-test: OrderFacade 동시성 테스트 작성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,9 +20,9 @@ spring:
     properties:
       hibernate.timezone.default_storage: NORMALIZE_UTC
       hibernate.jdbc.time_zone: UTC
-      hibernate.format_sql: true
-      hibernate.highlight_sql: true
-      hibernate.use_sql_comments: true
+      hibernate.format_sql: false
+      hibernate.highlight_sql: false
+      hibernate.use_sql_comments: false
       hibernate.default_batch_fetch_size: 100
   sql:
     init:
