🔧 Add: application.yml Redis Connection Info 설정 / RedissonConfig 빈 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,6 +41,11 @@ spring:
     username: application
     password: application
 
+  redis:
+    cluster:
+      nodes: localhost:7001, localhost:7002, localhost:7003
+    timeout: 3000
+
 logging:
   level:
     org.hibernate:
