--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,8 +42,8 @@ spring:
     password: application
 
   redis:
-    cluster:
-      nodes: localhost:7001, localhost:7002, localhost:7003
+    host: localhost
+    port: 6379
     timeout: 3000
 
 logging:
