Add: Kafka 의존성 추가 및 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,6 +33,34 @@ spring:
   output:
     ansi:
       enabled: always
+  kafka:
+    bootstrap-servers: localhost:9092
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      acks: all
+      retries: 2147483647
+      enable-idempotence: true
+      max-in-flight-requests-per-connection: 5
+      delivery-timeout-ms: 120000
+      request-timeout-ms: 30000
+      retry-backoff-ms: 100
+      batch-size: 16384
+      linger-ms: 5
+      compression-type: snappy
+    consumer:
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      enable-auto-commit: false
+      auto-offset-reset: earliest
+      max-poll-records: 500
+      max-poll-interval-ms: 300000
+      session-timeout-ms: 30000
+      heartbeat-interval-ms: 3000
+      isolation-level: read-committed
+      properties:
+        spring.json.trusted.packages: "*"
+        spring.json.value.default.type: "kr.hhplus.be.server.shared.event.KafkaEventMessage"
 
 
 ---
@@ -44,10 +72,11 @@ spring:
     username: application
     password: application
 
-  redis:
-    host: localhost
-    port: 6379
-    timeout: 3000
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      timeout: 3000
 
 logging:
   level:
