--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,14 @@
+server:
+  tomcat:
+    threads:
+      max: 300       # 최대 워커 쓰레드 수 (기본 200)
+      min-spare: 50  # 대기 중 쓰레드 최소 개수 (기본 10)
+      
 spring:
   application:
     name: hhplus
-  profiles:
-    active: local
+#  profiles:
+#    active: local
   datasource:
     name: HangHaePlusDataSource
     type: com.zaxxer.hikari.HikariDataSource
@@ -63,7 +69,6 @@ spring:
         spring.json.trusted.packages: "*"
         spring.json.value.default.type: "kr.hhplus.be.server.shared.event.KafkaEventMessage"
 
-
 ---
 spring.config.activate.on-profile: local, test
 
@@ -86,7 +91,63 @@ spring:
 logging:
   level:
     org.hibernate:
-      SQL: DEBUG
+      SQL: WARN
       description.sql.BasicBinder: TRACE
+      org.apache.coyote: INFO
+      org.apache.tomcat.util.net: DEBUG
+  pattern:
+    console: "%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n%wEx"
+
+---
+spring.config.activate.on-profile: load-test
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: ["*"]
+  prometheus:
+    metrics:
+      export:
+        enabled: true
+  metrics:
+    enable:
+      jvm: true
+      system: true
+      process: true
+      hikaricp: true
+    tags:
+      application: ${spring.application.name}
+      environment: ${spring.profiles.active}
+  endpoint:
+    metrics:
+      access: unrestricted
+    prometheus:
+      access: unrestricted
+
+
+spring:
+  datasource:
+    url: jdbc:mysql://mysql:3306/hhplus?characterEncoding=UTF-8&serverTimezone=UTC
+    username: application
+    password: application
+
+  data:
+    redis:
+      host: redis
+      port: 6379
+      timeout: 3000
+
+  kafka:
+    bootstrap-servers: kafka:9092
+
+
+logging:
+  level:
+    org.apache.coyote: INFO
+    org.apache.tomcat.util.net: DEBUG
+    org.hibernate:
+      SQL: WARN
+
   pattern:
     console: "%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n%wEx"
