--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,22 +19,47 @@ services:
     ports:
       - "6379:6379"
     command: redis-server --appendonly yes
+    volumes:
+      - redis-data:/data
 
   kafka:
     image: public.ecr.aws/bitnami/kafka:3.5.1
     ports:
       - "9094:9094"
+      - "9092:9092"
     volumes:
-      - ./data/kafka:/bitnami/kafka
+      - kafka-data:/bitnami/kafka
     environment:
       KAFKA_CFG_NODE_ID: 0
       KAFKA_CFG_PROCESS_ROLES: controller,broker
       KAFKA_CFG_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
       KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
       KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
-      KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: 0@127.0.0.1:9093
+      KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: 0@localhost:9093
       KAFKA_CFG_CONTROLLER_LISTENER_NAMES: CONTROLLER
+
+  spring-app:
+    build:
+      context: .
+      dockerfile: Dockerfile-app
+    ports:
+      - "8080:8080"
+    environment:
+      - SPRING_PROFILES_ACTIVE=load-test
+    depends_on:
+      - mysql
+      - redis
+      - kafka
+    deploy:
+      resources:
+        limits:
+          cpus: "2"
+          memory: "4g"
 
 networks:
   default:
     driver: bridge
+
+volumes:
+  redis-data:
+  kafka-data:
